--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,10 @@ dependencies:
   http: ^0.12.0+2
   flutter_mobx: ^1.1.0
   flutter_html: ^1.0.0-pre.1
-  esys_flutter_share: ^1.0.2
   url_launcher: ^5.4.10
   material_design_icons_flutter: 4.0.5245 
   splashscreen: ^1.2.0
-  image_picker: 
+  image_picker: ^0.6.7+1    
   mask_text_input_formatter: ^1.0.6
 
 
