--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: compredopequeno
-description: A new Flutter project.
+description: A new Flutter project. 
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.0+2
+version: 1.2.0+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,25 +23,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^0.20.0-nullsafety
   mobx: ^1.2.0
-  http: ^0.12.0+2
+  http: ^0.13.0
   flutter_mobx: ^1.1.0
-  flutter_html: ^1.0.0-pre.1
+  flutter_html: ^1.3.0
   url_launcher: ^5.4.10
   material_design_icons_flutter: 4.0.5245 
   splashscreen: ^1.2.0
-  image_picker: ^0.6.7+1    
+  image_picker: ^0.7.2    
   mask_text_input_formatter: ^1.0.6
+  cupertino_icons: ^1.0.0
+  image_picker_platform_interface: ^2.0.0
+  image_picker_for_web: ^2.0.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   mobx_codegen: ^1.1.0
   build_runner: ^1.10.0
-  flutter_launcher_icons: "^0.7.0"
+  flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
 
